--- a/css/styles.css
+++ b/css/styles.css
@@ -168,9 +168,13 @@ footer p {
 
 footer a {
   color: #fff;
-  color: #fff;
   font-size: 1.2rem;
   padding: 0.5rem 0.75rem;
+}
+
+footer a > svg {
+  fill: white;
+  width: 1.2rem;
 }
 
 /* MEDIA QUERIES */
